[package]
name = "disastle-rust"
version = "0.1.0"
authors = ["Hieu Nguyen <nthieu173@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = { version="0.5", features=["serde-1"] }
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lambda_runtime = "0.2"
aws_lambda_events = "0.2"