[package]
name = "disastle-rust"
version = "0.1.0"
authors = ["Hieu Nguyen <nthieu173@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
disastle-castle-rust = { path = "../disastle-castle-rust"}
rand = {version="0.8", features=["alloc"]}
nanoid = "0.4"