[package]
name = "disastle-rust"
version = "0.1.0"
authors = ["Hieu Nguyen <nthieu173@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
disastle-castle-rust = { git = "https://github.com/nthieu173/disastle-castle-rust.git"}
rand = {version="0.8", features=["alloc"]}
serde = { version = "1.0", features = ["derive"] }
ron = "0.6"